fixed some alignment of ui

--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,4 +1,24 @@
 .grid-container {
-    padding-left: 3%;
+    padding-left: 2%;
     padding-top: 2%;
+}
+
+.user-rating {
+    background: #F7DC6F;
+    width: 40%;
+    color: #ffffff;
+    text-align: center;
+}
+
+.user-price {
+display: flex;
+   // padding-left: 10%;
+    text-align: justify;
+
+}
+
+.action-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
